Update xgremlin.conf to add wsl browser
Add a line for the wsl browser if using WSL on windows

--- a/xgremlin.conf
+++ b/xgremlin.conf
@@ -4,8 +4,10 @@
 # Uncomment for xmhtml browser (cygwin)
 # browser xmhtml
 # Uncomment for safari or firefox browser (Mac OS X)
- browser /Applications/Safari.app/Contents/MacOS/Safari
+# browser /Applications/Safari.app/Contents/MacOS/Safari
 # browser /Applications/Firefox.app/Contents/MacOS/firefox
 # Uncomment for firefox browser (other)
 # browser firefox
+# Uncomment for WSL browser on Windows
+browser wslview
 break
